@@ -40,7 +40,7 @@ You can also look for information at:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2009-2016 chromatic
+Copyright (C) 2009-2017 chromatic
 
 This program is free software; you can redistribute it and/or modify it
 under the same terms as Perl itself.
